Working On SSM-ADMIN

--- a/smm-admin/assets/css/main.css
+++ b/smm-admin/assets/css/main.css
@@ -3,7 +3,8 @@
 @import url("custom-css/reusable.css");
 @import url("custom-css/button.css");
 @import url("custom-css/header.css");
-@import url("custom-css/product-card.css");
+@import url("custom-css/sidebar.css");
+@import url("custom-css/template.css");
 @import url("style.css");
 @import url("custom-css/footer.css");
 @import url("custom-css/media-queries.css");
