--- a/smm-admin/assets/css/custom-css/variables.css
+++ b/smm-admin/assets/css/custom-css/variables.css
@@ -3,9 +3,14 @@
   --brand-color: #6c5ffc;
   --green-color: #13bfa6;
   --red-color: #e82646;
+  --light-color: #f0f0f5;
   --white-color: #ffffff;
   --black-color: #000000;
 
   --text-color: #282f53;
   --text-color-muted: #74829c;
+
+  /* ====== Transition ====== */
+  --tran-03: all 0.3s ease;
+  --tran-04: all 0.4s ease;
 }
