--- a/smm-admin/assets/css/custom-css/variables.css
+++ b/smm-admin/assets/css/custom-css/variables.css
@@ -8,7 +8,9 @@
   --black-color: #000000;
 
   --text-color: #282f53;
+  --text-color-2: #b4bdce;
   --text-color-muted: #74829c;
+  --text-color-muted-2: #e9edf4;
 
   /* ====== Transition ====== */
   --tran-03: all 0.3s ease;
