--- a/smm-admin/assets/css/custom-css/reset.css
+++ b/smm-admin/assets/css/custom-css/reset.css
@@ -59,3 +59,16 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+a.nav-link {
+  color: var(--text-color);
+}
+
+a.nav-link:hover {
+  color: var(--brand-color);
+}
