--- a/smm-admin/assets/css/custom-css/reusable.css
+++ b/smm-admin/assets/css/custom-css/reusable.css
@@ -48,6 +48,16 @@
 }
 
 /* fonts */
+.fs-12 {
+  font-size: 1.2rem;
+}
+
+.fs-14 {
+  font-size: 1.4rem;
+}
+.fs-15 {
+  font-size: 1.5rem;
+}
 .fs-30 {
   font-size: 3rem;
 }
