--- a/smm-admin/assets/css/custom-css/reusable.css
+++ b/smm-admin/assets/css/custom-css/reusable.css
@@ -48,10 +48,15 @@
 }
 
 /* fonts */
+.fs-10 {
+  font-size: 1rem;
+}
+.fs-11 {
+  font-size: 1.1rem;
+}
 .fs-12 {
   font-size: 1.2rem;
 }
-
 .fs-14 {
   font-size: 1.4rem;
 }
@@ -85,8 +90,11 @@
 .fw-semibold {
   font-weight: 600;
 }
-/* Border */
 
+/* Border */
+.border-s-brand-5 {
+  border-left: 0.5rem solid var(--brand-color);
+}
 /* Border Radius */
 .rounded-4 {
   border-radius: 0.75rem !important;
