--- a/smm-admin/assets/css/custom-css/reusable.css
+++ b/smm-admin/assets/css/custom-css/reusable.css
@@ -14,6 +14,9 @@
 .black-color {
   color: var(--black-color) !important;
 }
+.light-color {
+  color: var(--light-color) !important;
+}
 .text-color {
   color: var(--text-color) !important;
 }
@@ -46,49 +49,52 @@
 .bg-text-muted {
   background-color: var(--text-color-muted);
 }
+.bg-light {
+  background-color: var(--light-color) !important;
+}
 
 /* fonts */
 .fs-10 {
-  font-size: 1rem;
+  font-size: 1rem !important;
 }
 .fs-11 {
-  font-size: 1.1rem;
+  font-size: 1.1rem !important;
 }
 .fs-12 {
-  font-size: 1.2rem;
+  font-size: 1.2rem !important;
 }
 .fs-14 {
-  font-size: 1.4rem;
+  font-size: 1.4rem !important;
 }
 .fs-15 {
-  font-size: 1.5rem;
+  font-size: 1.5rem !important;
 }
 .fs-30 {
-  font-size: 3rem;
+  font-size: 3rem !important;
 }
 
 .fs-35 {
-  font-size: 3.5rem;
+  font-size: 3.5rem !important;
 }
 
 .fs-40 {
-  font-size: 4rem;
+  font-size: 4rem !important;
 }
 
 .fs-45 {
-  font-size: 4.5rem;
+  font-size: 4.5rem !important;
 }
 
 .fs-50 {
-  font-size: 5rem;
+  font-size: 5rem !important;
 }
 
 .fw-medium {
-  font-weight: 500;
+  font-weight: 500 !important;
 }
 
 .fw-semibold {
-  font-weight: 600;
+  font-weight: 600 !important;
 }
 
 /* Border */
