--- a/smm-admin/assets/css/style.css
+++ b/smm-admin/assets/css/style.css
@@ -24,3 +24,37 @@
   height: 2.5rem;
 }
 /* Location and Device Usage Details CSS End Here  */
+
+/* Success Modal Alert CSS Starts Here */
+.alert-icon {
+  font-size: 3.5rem;
+  width: 7rem;
+  height: 7rem;
+  background: var(--white-color);
+  color: var(--green-color);
+  border: 0.5rem solid var(--green-color);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+/* Success Modal Alert CSS Ends Here */
+
+/* 404 Page CSS Start Here */
+.page-bg {
+  background-image: url("../../images/page-background.jpg");
+  width: 100%;
+  min-height: 100vh;
+  background-size: cover;
+  position: relative;
+}
+
+.page-bg::before {
+  content: "";
+  background: linear-gradient(to right, #6c5ffcbd 0%, #05c3fb91 100%);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+/* 404 Page CSS End Here */
