--- a/smm-admin/assets/css/custom-css/sidebar.css
+++ b/smm-admin/assets/css/custom-css/sidebar.css
@@ -2,7 +2,7 @@
   padding-left: 2rem;
   padding-right: 2rem;
 }
-.sidebar .sidebar-header .logo {
+.logo {
   height: 4rem;
 }
 .sidebar .sidebar-content {
@@ -80,18 +80,20 @@
   font-size: 0.8rem;
 }
 
-#sidebar.close .menu-group .menu-name {
-  display: none;
-}
-#sidebar.close .dropdown__chevron {
-  display: none;
-}
-#sidebar.close .menu-group ul li a {
-  justify-content: center;
-}
-#sidebar.close .dropdown__menu .submenu {
-  display: none;
-}
-#sidebar.close .logo-text {
-  display: none;
+@media (min-width: 992px) {
+  #sidebar.close .menu-group .menu-name {
+    display: none;
+  }
+  #sidebar.close .dropdown__chevron {
+    display: none;
+  }
+  #sidebar.close .menu-group ul li a {
+    justify-content: center;
+  }
+  #sidebar.close .dropdown__menu .submenu {
+    display: none;
+  }
+  #sidebar.close .logo-text {
+    display: none;
+  }
 }
