Working On SMM ADMIN

--- a/smm-admin/assets/css/custom-css/reset.css
+++ b/smm-admin/assets/css/custom-css/reset.css
@@ -19,6 +19,27 @@ body {
   overflow-x: hidden;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+  height: 12px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #a8a8a8;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c9c9c9;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #a8a8a8;
+}
+
 p {
   font-size: 1.6rem;
   font-weight: normal;
